[gd_scene load_steps=4 format=3 uid="uid://dp76oit6ira6l"]

[ext_resource type="Script" uid="uid://dksu54pge40k0" path="res://Debug/debug_hud.gd" id="1_jwuoe"]

[sub_resource type="SystemFont" id="SystemFont_dnh6s"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_jwuoe"]
font_size = 15

[node name="DebugHUD" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_jwuoe")

[node name="PlayerDebugPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1000.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -522.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PlayerDebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerDebugPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PlayerDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player Debug"

[node name="XP_Label" type="Label" parent="PlayerDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "XP:"
label_settings = SubResource("LabelSettings_jwuoe")

[node name="XP_Percent_Label" type="Label" parent="PlayerDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "XP:"
label_settings = SubResource("LabelSettings_jwuoe")

[node name="Level_Label" type="Label" parent="PlayerDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "Level: "
label_settings = SubResource("LabelSettings_jwuoe")

[node name="HP_Label" type="Label" parent="PlayerDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "HP:"
label_settings = SubResource("LabelSettings_jwuoe")

[node name="LevelDebugPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1000.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -522.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="LevelDebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LevelDebugPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="LevelDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player Debug"

[node name="XP_Label" type="Label" parent="LevelDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "XP:"
label_settings = SubResource("LabelSettings_jwuoe")

[node name="XP_Percent_Label" type="Label" parent="LevelDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "XP:"
label_settings = SubResource("LabelSettings_jwuoe")

[node name="Level_Label" type="Label" parent="LevelDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "Level: "
label_settings = SubResource("LabelSettings_jwuoe")

[node name="HP_Label" type="Label" parent="LevelDebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dnh6s")
theme_override_font_sizes/font_size = 40
text = "HP:"
label_settings = SubResource("LabelSettings_jwuoe")
